package swarm.messages;

public enum EventType {
    FIRE_DETECTED,
    DRONE_REQUEST
}