@startuml
skinparam classAttributeIconSize 0
hide circle

' Packages
package "swarm.infra" {
  class DroneConfig <<final>> {
    {static} -TEST_MODE: boolean
    {static} +CRUISE_SPEED_MPS: double
    {static} +TAKEOFF_ACCEL_MPS2: double
    {static} +LANDING_DECEL_MPS2: double
    {static} +TAKEOFF_TIME_S: double
    {static} +TAKEOFF_DIST_M: double
    {static} +LANDING_TIME_S: double
    {static} +LANDING_DIST_M: double
    {static} +DOOR_OPEN_TIME_S: double
    {static} +DOOR_CLOSE_TIME_S: double
    {static} +DROP_RATE_LPS: double
    {static} +AGENT_CAPACITY_LITERS: int
    {static} +BASE_POSITION: Position
    {static} +enableTestMode(): void
    {static} +disableTestMode(): void
    {static} +travelTimeMillis(distanceMeters: double): long
    {static} +dropTimeMillis(litersRequired: int): long
    {static} +doorOpenCloseMillis(): long
  }

  class MessageBus {
    +fireEvents: MonitorQueue<FireEvent>
    +droneCommands: MonitorQueue<DroneCommand>
    +droneStatuses: MonitorQueue<DroneStatus>
    +MessageBus(capacity: int)
  }

  class MonitorQueue<T> {
    -buffer: Deque<T>
    -capacity: int
    +MonitorQueue(capacity: int)
    +put(item: T): void
    +take(): T
    +size(): int
  }

  class ZoneManager {
    -zones: Map<Integer, Zone>
    +ZoneManager(zoneFilePath: String)
    -loadZones(path: String): void
    -parsePosition(token: String): Position
    +getZone(id: int): Zone
    +getZoneCenter(id: int): Position
  }
}

package "swarm.main" {
  class SimulatorGUI {
    -logArea: JTextArea
    -bus: MessageBus
    -zoneManager: ZoneManager
    +SimulatorGUI()
    +log(message: String): void
    -startSimulation(): void
    +main(args: String[]): void
  }

  class SystemMain {
    +main(args: String[]): void
  }
}

package "swarm.messages" {
  class DroneCommand <<record>> {
    +droneId: int
    +zoneId: int
    +severity: Severity
  }

  enum DroneState {
    IDLE
    EN_ROUTE
    ARRIVED
    DROPPING_AGENT
    RETURNING
    REFILLING
    FAULT
  }

  class DroneStatus <<record>> {
    +droneId: int
    +state: DroneState
    +currentZoneId: Integer
    +remainingAgentLiters: int
  }

  enum EventType {
    FIRE_DETECTED
    DRONE_REQUEST
  }

  class FireEvent <<record>> {
    +timestampMillis: long
    +zoneId: int
    +type: EventType
    +severity: Severity
    +timestamp(): Instant
  }

  enum Severity {
    LOW
    MODERATE
    HIGH
    +litersRequired(): int
  }
}

package "swarm.model" {
  class Position <<record>> {
    +x: double
    +y: double
    +distanceTo(other: Position): double
  }
  class Zone <<record>> {
    +id: int
    +start: Position
    +end: Position
    +center(): Position
  }
}

package "swarm.subsystems" {
  class DroneSubsystem {
    -bus: MessageBus
    -droneId: int
    -zoneManager: ZoneManager
    -currentAgent: int
    -currentPosition: Position
    +DroneSubsystem(bus: MessageBus, droneId: int, zoneManager: ZoneManager)
    +run(): void
    -processMissions(): void
    -reportStatus(state: DroneState, zoneId: Integer): void
  }

  class FireIncidentSubsystem {
    -bus: MessageBus
    -inputFileName: String
    +FireIncidentSubsystem(bus: MessageBus, inputFileName: String)
    +run(): void
    -runEventReader(): void
    -runStatusListener(): void
    -readIncidents(inputFileName: String): void
  }

  class Scheduler {
    -bus: MessageBus
    -missionQueue: Queue<FireEvent>
    -droneBusy: boolean
    -droneId: int
    +Scheduler(bus: MessageBus)
    +run(): void
    -handleFireEvents(): void
    -dispatchDrone(): void
    -handleDroneStatuses(): void
  }
}

' Dependencies
SystemMain --> MessageBus
SystemMain --> ZoneManager
SystemMain --> FireIncidentSubsystem
SystemMain --> Scheduler
SystemMain --> DroneSubsystem

SimulatorGUI --> MessageBus
SimulatorGUI --> ZoneManager
SimulatorGUI --> FireIncidentSubsystem
SimulatorGUI --> Scheduler
SimulatorGUI --> DroneSubsystem

' MessageBus owns the queues
MessageBus o-- "1" MonitorQueue : fireEvents
MessageBus o-- "1" MonitorQueue : droneCommands
MessageBus o-- "1" MonitorQueue : droneStatuses

' Subsystems use the bus
FireIncidentSubsystem --> MessageBus
Scheduler --> MessageBus
DroneSubsystem --> MessageBus

' DroneSubsystem uses zone + config + position
DroneSubsystem --> ZoneManager
DroneSubsystem ..> DroneConfig
DroneSubsystem ..> Position

' Zone management model
ZoneManager o-- "0..*" Zone
ZoneManager ..> Position
Zone o-- "2" Position

' Messages dependencies
DroneCommand --> Severity
DroneStatus --> DroneState
DroneStatus --> "0..1" Integer
FireEvent --> EventType
FireEvent --> Severity

DroneConfig ..> Position

@enduml